# UnSegGNet

./: .gitignore  LICENSE  README.md  bilateral_solver.py  extractor.py  features_extract.py  gnn_pool.py  main.py  pyproject.toml  requirements.txt  script.sh  segment.py  util.py
datasets/: DATASETS.md  dataset.py
