[tool.poetry]
name = "unseggnet"
version = "0.1.0"
description = "Unsupervised Image Segmentation using Graph Neural Networks"
authors = ["Kovvuri Sai Gopal Reddy", "Bodduluri Saran"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
deeplake = "3.9.0"
opencv-python-headless = "^4.9.0.80"
scikit-learn = "^1.4.1.post1"
pillow = "10.2.0"
matplotlib = "^3.8.4"
tifffile = "^2024.2.12"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
